--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
 		<script src="js/main.js" type="text/javascript"></script>
 		<script src="js/IRC.js" type="text/javascript"></script>
 		<script src="js/messageParser.js" type="text/javascript"></script>
+		<script src="js/tools.js" type="text/javascript"></script>
 
 	</head>
 	<body ng-controller="fieldsController as ctrl">
